styles.css
:root {
    --background-color-default: black;
    --background-color-inputbox: rgb(55, 55, 55);
    --background-color-checker: rgb(40, 40, 40);
    --text-color-default: white;
    --text-color-highlighted: black;
    --text-color-placeholder: rgb(223, 223, 223);
    --highlight-color-default: black;
    --highlight-color-highlighted: white;
    --button-color-default: black;
    --button-color-highlighted: black;
    --button-color-clicked: white;
    --button-highlight-color-default: white;
    --button-highlight-color-highlighted: rgb(127, 127, 127);
    --button-highlight-color-clicked: black;
    --heading-color: black;
    --heading-highlight-color: white;
    --not-important-color: gray;
    --error-color: red;
    --win-color: rgb(0, 255, 0);
    --font-size-default: calc(min(max(10px, 100vh/40/1.1), 30px));
    --font-size-emoji: calc(7/20 * var(--font-size-default));
    --font-family-default: monospace;
    --font-weight-default: normal;
    --line-height-default: 1.1rem;

    font-size: var(--font-size-default);
}

body {
    background-color: var(--background-color-default);
    color: var(--text-color-default);
    font-size: var(--font-size-default);
    font-family: var(--font-family-default);
    font-weight: var(--font-weight-default);
    margin: 0;
    padding: 0;
    overflow-x: scroll;
    overflow-y: scroll;
    overflow: hidden;
    line-height: var(--line-height-default);
    height: 100%;
}

html {
    height: 100%;
}

p {
    padding: 0;
    margin: 0;
}

pre {
    padding: 0;
    margin: 0;
}

h1, h2, h3, h4, h5, h6 {
    font-size: var(--font-size-default);
    font-weight: var(--font-weight-default);
    padding: 0;
    margin: 0;
    color: var(--heading-color);
    background-color: var(--heading-highlight-color);
}

input {
    background-color: var(--background-color-default);
    color: var(--text-color-default);
    border: 0;
    outline: none;
    font-size: var(--font-size-default);
    margin: 0;
    padding: 0;
    font-family: var(--font-family-default);
    height: var(--line-height-default);
}

button {
    background-color: var(--button-highlight-color-default);
    color: var(--button-color-default);
    border: 0;
    outline: none;
    font-size: var(--font-size-default);
    margin: 0;
    padding: 0;
    font-family: var(--font-family-default);
    height: var(--line-height-default);
}

button:hover, button.toggled:hover {
    background-color: var(--button-highlight-color-highlighted);
}

button.toggled {
    color: var(--button-color-clicked);
    background-color: var(--button-highlight-color-clicked);
}

button:active {
    color: var(--button-color-clicked);
    background-color: var(--button-highlight-color-clicked);
}

input::placeholder {
    color: var(--text-color-placeholder);
}

.prevent-select {
    -webkit-user-select: none;
    /* Safari */
    -ms-user-select: none;
    /* IE 10 and IE 11 */
    user-select: none;
    /* Standard syntax */
}

.flex-table-holder-holder {
    display: flex; 
    align-items: flex-start;
}

.flex-table-holder {
    flex-shrink: 0;
}

.hidden {
    display: none;
}

html, body {
    height: 100%;
    margin: 0;
    overflow-x: hidden;
}

.container {
    display: flex;
    min-height: 100vh;
}

.main-content {
    flex-grow: 1;
}

